# yew-app-websys

./: .firebaserc  .gitignore  Cargo.toml  Makefile.toml  firebase.json
public/: index.html
src/: lib.rs
src/components/: main_page.rs
src/material/: topbar.rs
