[package]
name = "yew-app"
version = "0.1.0"
authors = ["Yew App Developer <name@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.13.0", features = ["web_sys"] }
js-sys = "0.3.36"
wasm-bindgen = "^0.2.50"

[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
